<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_marginEnd="16dp"
    tools:context=".MainActivity">

    <!-- Product Image -->
    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/productImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/tomato"

        android:layout_marginBottom="4dp"/>

    <!-- Product Name, Brand, and Category -->
    <TextView
        android:id="@+id/productNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="#000000"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/brandCategoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Brand | Category"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginBottom="2dp"/>
    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="₹999.99"
        android:textSize="16sp"
        android:textColor="#00838f"
        android:layout_marginBottom="2dp"/>



    <!-- Stock Status -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- Product Price -->


    <TextView
        android:id="@+id/stockStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_of_stock"
        android:textSize="18sp"
        android:textColor="#FF0000"
        android:layout_marginBottom="2dp"/>

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/baseline_share_24"
            android:layout_marginStart="110dp"
            android:background="?android:attr/selectableItemBackground"/>

    <!-- Rating Bar -->




</LinearLayout>


    <RatingBar

        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="4.5"
        android:layout_marginBottom="2dp"/>

    <!-- Quantity and Share Button -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >


        <!-- Quantity Spinner -->
        <Spinner
            android:id="@+id/quantitySpinner"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/qty_1_kg"
            android:textSize="20sp"
            android:textColor="#000000"
           />



        <!-- Add to Cart Button -->
        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:drawableLeft="@drawable/baseline_shopping_cart_24"
            android:layout_gravity="end"
            />


    </LinearLayout>


</LinearLayout>
